	  - show price of items in shops without #chatting
	  - Curses GUI

	* vanilla bug fixes:
	  - C343-12, C343-94, C343-189, C343-235
	  - SC343-8, SC343-20

	* added items:
	  - scroll of flood

	* removed items:
	  - scroll of amnesia

	* new rooms:
	  - instrument shop (adapted from NetHack Brass RS)
	  - pet stores (from Slash'Em)
	  - tin shops (from Slash'Em)


2010-01-10  UnNetHack 3.5.2-1
	Crash bugfix: Prevent alchemizing not existing potions


2009-12-09  UnNetHack 3.5.2
	* Increased skill levels
	* Blood-sucking and biting Vampires (from Slash'Em)
	* New option: showdmg (only in wizmode)
	* Trollsbane: grants hungerless regeneration
	* Vorpal Blade: +1d8 special damage
	* Prevent crash when rn2 <= 0 is called
	* Vibrating square: messages when player is near

	* new items:
	  - potion of blood and vampire blood (from Slash'Em)

	* Patches:
	  - Bag of Tricks Enhancement Patch (by Nephi)
	  - Breaking a camera may release a picture painting demon (by L)
	  - Camera Demon (by L)
	  - Cancellation Patch (by Malcolm Ryan)
	  - Color alchemy Patch (by Nephi)
	  - Free Fortune Cookie (by Nephi)
	  - Litmus Patch (by Dylan O'Donnell)
	  - Monk specific greeting and goodbye (by Haakon Studebaker)
	  - Oily corpses (by L)
	  - Qwertz_layout Patch (by Stanislav Traykov)
	  - While Helpless (by Pasi Kallinen)

	* vanilla bug fixes:
	  - C343-55, C343-116, C343-136, C343-211, C343-231

	* user interface improvements:
	  - Interrupt a multi turn action if hit points or magical energy is restored 


2009-06-13  UnNetHack 3.5.1
	* new levels:
	  - Fort Ludios levels
	  - Sokoban levels (by Pasi Kallinen)
	  - Medusa levels (by Pasi Kallinen)
	  - Castle levels (by Pasi Kallinen)
	  - Bigrooms (by Pasi Kallinen)
	  - Heck² levels (by Kelly Bailey)
	  - new mine town: Orcish Town (from SporkHack)
	  - nymph level (from Slash'Em)
	  - the Blackmarket (by Massimo Campostrini)
	  - flipped levels patch (by Pasi Kallinen)

	* new rooms:
	  - garden