@@ -2957,6 +2957,13 @@ struct permonst _mons2[] = {
 	SIZ(200, 200, 0, MS_SILENT, MZ_MEDIUM), 0, 0,
 	M1_SWIM|M1_AMPHIBIOUS|M1_ANIMAL|M1_NOHANDS|M1_CARNIVORE,
 	M2_HOSTILE, 0, CLR_BROWN),
+    MON("giant turtle", S_LIZARD,
+	LVL(7, 2, -5, 10, 0), (G_GENO|1),
+	A(ATTK(AT_BITE, AD_PHYS, 4, 6),
+	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
+	SIZ(4000, 1200, 0, MS_HISS, MZ_HUGE), MR_STONE, MR_STONE,
+	M1_ANIMAL|M1_THICK_HIDE|M1_NOHANDS|M1_HERBIVORE,
+	M2_HOSTILE,0, CLR_BRIGHT_GREEN),
     MON("lizard", S_LIZARD,
 	LVL(5, 6, 6, 10, 0), (G_GENO|5),
 	A(ATTK(AT_BITE, AD_PHYS, 1, 6),
